--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@ update_json_data.js
 Spis run.csv
 package.json
 package-lock.json
+1h2h.js
+Lista Broni.csv
+Lista mebli.csv
+update_json_with_details.js
